alignament cards fixed, migth be responsive but we aren't sure

--- a/src/app/event-card/event-card.component.css
+++ b/src/app/event-card/event-card.component.css
@@ -1,37 +1,42 @@
 .ticket-vertical {
-    background-color: #2a8dfb; /* Azul vibrante */
-    width: 20rem;
-    height: 28rem;
+    background-color: #2a8dfb; /* Azul vibrante */ 
     position: relative;
-    font-family: 'inclusive', sans-serif;
-    /* box-shadow: 0 4px 12px rgba(0,0,0,0.15);  */
-    margin: 2px auto;
+    font-family: 'inclusive', sans-serif; 
     display: flex;
+    flex-direction: column;
 }
 
 .inside-text {
-    height: 28rem;
-    padding: 0.7rem;
+    height: 28rem;  
+    padding: 1.5rem;
     position: relative;
     display: flex;
     flex-direction:column;
     align-items: center;
     justify-content: center;
 }
-  
 
-.inside-text h2{ 
+.inside-text h2{
     font-family: 'Baloo Bhaijaan 2 Variable', system-ui;
     font-weight: bold;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     color: #ffffff;
+
+    @media (max-width: 430px){
+        font-size: 2rem;
+        
+    } 
 }
 
-.inside-text p{ 
-    font-size: 1rem;
+.inside-text p{
+    font-size: 1.2rem;
     color: #ffffff;
     font-family: "inclusive", sans-serif;
-} 
+
+    @media (max-width: 430px){
+        font-size: 1.3rem;
+    } 
+}
 
 /* Muescas superior e inferior */
 .ticket-vertical::before,
